# logging-public

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/builddir/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/builddir/.doctrees/: environment.pickle  index.doctree
docs/builddir/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  logging_extended.adapters.rst  logging_extended.filters.rst  logging_extended.formatters.rst  logging_extended.handlers.rst  logging_extended.rst  modules.rst
logging_extended/: __init__.py  adapters.py  config_helpers.py  custom_levels.py  handlers.py  helpers.py  loggers.py
logging_extended/adapters/: __init__.py  helpers.py  message_adapters.py  style_adapter.py
logging_extended/filters/: __init__.py  any_filter.py  filter_custom_attribute.py  filter_exception.py  filter_level.py
logging_extended/formatters/: __init__.py  color_formatter.py  csv_formatter.py  json_formatter.py  pickle_formatter.py
logging_extended/handlers/: __init__.py  json_handler.py  pickle_handler.py
tests/: conftest.py  test_adapters.py  test_color_formatter.py  test_custom_levels.py  test_filter_custom_attribute.py  test_handlers.py  test_loggers.py  test_simulate_logging.py
