[metadata]
name = logging_extended
version = 0.0.1
author = Jindřich Burget
author_email = burget.jindrich@gmail.com
description = Extends functionality of build in logging module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jburget/logging-extended
install_requires = ["sty"]
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent
[options]
packages = find:
package_dir =
python_requires = >=3.7
include_package_data = True

[options.packages.find]
exclude = [tests, htmlcov, docs]